# sync_logger

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: test-linux.yml  test-windows.yml
playground/: CMakeLists.txt
playground/src/: playground.cpp
sync_logger/: CMakeLists.txt
sync_logger/include/: sync_logger.hpp  sync_logger_formatters.hpp
sync_logger/src/: sync_logger.cpp  sync_logger_formatters.cpp
